[[bin]]
name = "anubis"
path = "src/main.rs"
default-run = "anubis"

[package]
name = "anubis"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures-util = "0.3.31"
num_cpus = "1.17.0"
reqwest = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
